Fix bug with word wrapping in code highlight

--- a/_sass/highlight.scss
+++ b/_sass/highlight.scss
@@ -12,6 +12,10 @@
     text-align: right;
     opacity: 20%;
   }
+
+  .rouge-code {
+    word-break: break-all;
+  }
 }
 
 figure.highlight {
